tests/cases/fail/from_import_unknown.p4
from math import nope

def main() -> None:
    print(1)
